--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,10 @@
    <form method="post">
    {% for key, value in datadict.items() %}
         <fieldset>
-            <legend>{{key}}</legend>
+            <legend>
+                <span id="{{key}}">&#x273A;</span>
+                <span>{{key}}</span>
+            </legend>
             {% for subkey, subvalue in value.items() %}
             <label>{{subkey}}
                 <input {{subvalue['attrs']}} name="{{key}}_{{subkey}}"
@@ -22,7 +25,4 @@
       </div>
    </form>
 
-   {% for key, value in datadict.items() %}
-   <p>{{key}}:{{value}}
-   {% endfor %}
 {% endblock %}
