--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,8 @@
 {% block content %}
 <h1>{% block title %} Welcome to HydroControl {% endblock %}</h1>
 
+<p align="center" id="time"></p>
+
 <div class="flex-container">
 {% for key in keylist %}
   <div class="flex-item">
